--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -32,7 +32,9 @@ RemoveUnusedMethodsInModelsCheck: {
   except_methods: [
     'User#follow',
     'User#unfollow',
-    'User#authenticated?'
+    'User#authenticated?',
+    'OrderItem#total_price',
+    'OrderItem#increment_product_quantity'
   ],
   ignored_files: []
 }
